--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,8 @@
 server {
     listen 80;
-    server_name bas-hlakrout.app.norsys.fr;
-    root /var/www/html/pepsneir/public;
+    server_name oro.demo;
+    root /var/www/html/public;
+    index index.php;
     
     gzip on;
     gzip_buffers 16 8k;
@@ -12,23 +13,23 @@ server {
     gzip_proxied any;
     gzip_types text/plain application/javascript application/x-javascript text/javascript         text/xml text/css image/svg+xml;
     gzip_vary on;
-location / {
-  try_files $uri /index.php$is_args$args;
-}
+    location / {
+      try_files $uri /index.php$is_args$args;
+    }
 
-
-location ~ ^/(index|index_dev|config|install)\.php(/|$) {
-  fastcgi_pass localhost:9000;
-  fastcgi_split_path_info ^(.+\.php)(/.*)$;
-  include fastcgi_params;
-  fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-}
-location ~* ^[^(\.php)]+\.(jpg|jpeg|gif|png|ico|css|pdf|ppt|txt|bmp|rtf|js)$ {
-       access_log off;
-       expires 1h;
-       add_header Cache-Control public;
+    location ~ ^/(index|index_dev|config|install)\.php(/|$) {
+      fastcgi_pass localhost:9000;
+      fastcgi_split_path_info ^(.+\.php)(/.*)$;
+      include fastcgi_params;
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
     
-error_log /var/log/nginx/error.log;
-access_log /var/log/nginx/access.log;
+    location ~* ^[^(\.php)]+\.(jpg|jpeg|gif|png|ico|css|pdf|ppt|txt|bmp|rtf|js)$ {
+      access_log off;
+      expires 1h;
+      add_header Cache-Control public;
+    }
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
