--- a/php/conf.d/php.dev.ini
+++ b/php/conf.d/php.dev.ini
@@ -1,4 +1,5 @@
 date.timezone = UTC
-memory_limit = 1024M
+memory_limit = 2048M
 upload_max_filesize = 20M
 post_max_size = 20M
+max_execution_time = 600
