--- a/php/conf.d/xdebug.ini
+++ b/php/conf.d/xdebug.ini
@@ -1,3 +1,4 @@
+[xdebug]
 zend_extension=xdebug
 xdebug.remote_handler=dbgp
 xdebug.client_port=9003
@@ -5,6 +6,10 @@ xdebug.log="/app/var/log/xdebug.log"
 xdebug.discover_client_host=1
 xdebug.idekey=PHPSTORM
 xdebug.client_host=host.docker.internal
-xdebug.start_with_request=trigger
-xdebug.mode=debug, coverage, develop
+xdebug.start_with_request=yes
+;use for test coverage
+;xdebug.mode=coverage
+xdebug.mode=debug
 xdebug.log_level=0
+xdebug.max_nesting_level=512
+xdebug.php_ide_config="serverName=oro.demo"
