--- a/php/conf.d/php.dev.ini
+++ b/php/conf.d/php.dev.ini
@@ -3,3 +3,17 @@ memory_limit = 2048M
 upload_max_filesize = 20M
 post_max_size = 20M
 max_execution_time = 600
+[apcu]
+apc.enable_cli=1
+apc.enable=1
+[opcache]
+; maximum memory that OPcache can use to store compiled PHP files, Symfony recommends 256
+opcache.memory_consumption=256
+; maximum number of files that can be stored in the cache
+opcache.max_accelerated_files=20000
+; validate on every request
+opcache.revalidate_freq=0
+; re-validate timestamps, by default set to false (0)
+opcache.validate_timestamps=0
+opcache.interned_strings_buffer=16
+opcache.fast_shutdown=1
