--- a/php/conf.d/xdebug.ini
+++ b/php/conf.d/xdebug.ini
@@ -1,5 +1,5 @@
 [xdebug]
-zend_extension=xdebug
+;zend_extension=xdebug
 xdebug.remote_handler=dbgp
 xdebug.client_port=9003
 xdebug.log="/app/var/log/xdebug.log"
